--- a/public/index2.html
+++ b/public/index2.html
@@ -11,8 +11,8 @@
       cluster: 'us2'
     });
 
-    var channel = pusher.subscribe('my-channel');
-    channel.bind('app2', function(data) {
+    var channel = pusher.subscribe('app2');
+    channel.bind('payment', function(data) {
       alert(JSON.stringify(data));
     });
   </script>
